        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
        fix:  listener added before connectTo are now properly listening
        fix:  connectors peer id where wrongly generated in some cases
        impr: sensible performance improvement on high bandwidth message receptions
        impr: have different options to access dnssd (mdnsResponder, avahi, jmdns, custom proxy for lightweight devices)
        impr: added a default factory that smartly uses available dnssd provider (avahi then mdns then jmdns)
        impr: allows dnssd browser sharing to improve performance of applications using multiple browsers
        impr: cleaner affectation of peer id for searchs and connections before .start()
        impr: in order to handle mDNSResponder vs avahi daemons conflict happening on some configurations, the possible trailing "-2" on the hostname is removed when needed

1.0.3
r1700
        fix:  added some fallback behaviours to avoid exception when really old services are present
        impr: made IncorrectConnectorType a RuntimeException

1.0.2
r1614
2006-10-26
        fix:  implemented properly the sendToOneClient using a ServiceProxy
        impr: performance improvement for introspection connections
        fix:  added missing stream closing causing problems with numerous variable change notification
        impr: made some exceptions RuntimeException
        fix:  removed some more synchronization to allow to findService while doing other operations
        fix:  for OSGi, made the service proxy cache dependent of the service that creates the proxy
        impr: throwing some omiscid exceptions (instead of NPE) for some ServiceProxy methods

1.0.1
r1463
        fix: made variable subscription working properly from the common api
        fix: removed deadlock happening in some stressing tests
        fix: peer id propagation to the connectors after registration

1.0.0
        first release